--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-myconnection": "^1.0.4",
+    "express-session": "^1.17.0",
     "http-errors": "^1.7.3",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
